--- a/.github/workflows/pipeline-basico.yml
+++ b/.github/workflows/pipeline-basico.yml
@@ -1,13 +1,17 @@
-name: pipeline-basico
+name: jobs examples
 
 on:
-  workflow_dispatch:
+  push:
 
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Executa comando
-        run: echo "Configuração inicial do pipeline"
+      - name: Step do Job1
+        run: echo "Hello, world! Job1."
 
+  job2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Step do Job2
+        run: echo "Hello, world! Job2."
