--- a/.github/workflows/jobs-examples.yml
+++ b/.github/workflows/jobs-examples.yml
@@ -4,14 +4,15 @@ on:
   push:
 
 jobs:
-  job1:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Step do Job1
-        run: echo "Hello, world! Job1."
+      - name: Step do Job Build
+        run: echo "Hello, world! Build."
 
-  job2:
+  deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: Step do Job2
-        run: echo "Hello, world! Job2."
+      - name: Step do Deploy
+        run: echo "Hello, world! Deploy."
