--- a/.github/workflows/jobs-examples.yml
+++ b/.github/workflows/jobs-examples.yml
@@ -7,12 +7,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Step do Job Build
-        run: echo "Hello, world! Build."
+      - name: Create an artifact for reuse
+        run: echo "Full featured artifact" > build-result.txt
+
+      - name: Upload the artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-result
+          path: build-result.txt
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Step do Deploy
-        run: echo "Hello, world! Deploy."
+      - name: Download the artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-result
+          path: build-result.txt
+
+      - name: Use the artifact created
+        run: ls build-result.txt
