--- a/.github/workflows/jobs-examples.yml
+++ b/.github/workflows/jobs-examples.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Create an artifact for reuse
+      - name: Create an artifact for reuse (changed)
         run: echo "Full featured artifact" > build-result.txt
 
       - name: Upload the artifact
@@ -17,6 +17,7 @@ jobs:
           path: build-result.txt
 
   deploy:
+    if: contains(github.event.head_commit.message, '[deploy]')
     runs-on: ubuntu-latest
     needs: build
     steps:
