--- a/.github/workflows/steps-examples.yml
+++ b/.github/workflows/steps-examples.yml
@@ -18,3 +18,4 @@ jobs:
 
       - name: Output random number
         run: echo "random-number: ${{ steps.step-caller.outputs.random-number }}"
+        shell: bash
